background color changed.

--- a/css/textav.css
+++ b/css/textav.css
@@ -67,7 +67,7 @@ a {
     /*float : left ;*/
     width : 500px ;
 
-    background-color: #cccccc;
+    background-color: #ffffee;
     line-height: 200%;
 }
 
@@ -382,7 +382,7 @@ table.modanns tr td {
     /*margin-left: 10px;*/
     display: block;
     /*float: left;*/
-    background-color: #cccccc;
+    background-color: #eeeeee;
 
     width: 150px;
 
@@ -407,7 +407,7 @@ table.modanns tr td {
     /*margin-left: 10px;*/
     display: block;
     /*float: left;*/
-    background-color: #cccccc;
+    background-color: #eeeeee;
 
     width: 150px;
 
@@ -432,7 +432,7 @@ table.modanns tr td {
     /*margin-left: 10px;*/
     display: block;
     /*float: left;*/
-    background-color: #cccccc;
+    background-color: #eeeeee;
 
     width: 150px;
 
@@ -459,7 +459,7 @@ table.modanns tr td {
     /*margin-left: 10px;*/
     display: block;
     /*float: left;*/
-    background-color: #cccccc;
+    background-color: #eeeeee;
 
     width: 150px;
 
