instance annotation circle representation

--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,7 @@ a {
     width : 500px ;
 
     background-color: #cccccc;
-    line-height: 200%;
+    line-height: 220%;
 }
 
 #span_measure_area {
@@ -462,6 +462,15 @@ table.modanns tr td {
 
     font-size: small;
 }
+
+div.instance {
+    border-radius: 5px; /* CSS3 */
+    -moz-border-radius: 5px; /* Firefox */
+    -webkit-border-radius: 5px;  /* Safari,Chrome */
+    border: 2px solid;     /* 枠線の装飾 */
+}
+
+
 
 #annojson {
     display: none;
