--- a/css/textav.css
+++ b/css/textav.css
@@ -66,7 +66,10 @@ a {
     /*float : left ;*/
     width : 500px ;
 
-    background-color: #ffffee;
+    border-color:black;
+    border-style:solid;
+    border-width:1px;
+    background-color: #ffffff;
     line-height: 220%;
 }
 
