--- a/css/textae.css
+++ b/css/textae.css
@@ -1,3 +1,418 @@
+html,body {
+    font-family: verdana, arial, helvetica, sans-serif;
+    margin: 0px;
+    padding: 0px;
+    height: 100%;
+}
+
+a {
+    color: black;
+}
+
+#header_area {
+    display: block;
+    width: 65em;
+    height: 20px;
+    padding: 2px;
+    border-left: 5px solid #555588;
+
+    background-color: #BBBBFF;
+    /* fallback (Opera) */
+    background: #BBBBFF;
+    /* Mozilla: */
+    background: -moz-linear-gradient(left, #BBBBFF, #FFFFFF);
+    /* Chrome, Safari:*/
+    background: -webkit-gradient(linear,  left top, right top, from(#BBBBFF), to(#FFFFFF));
+    /* MSIE */
+    filter: progid:DXImageTransform.Microsoft.Gradient(  StartColorStr='#BBBBFF', EndColorStr='#FFFFFF', GradientType=1);
+}
+
+
+#title_area {
+    display: block;
+    width : 100%;
+    height: 20px;
+    font-style: italic;
+    text-overflow: ellipsis;
+}
+
+#document_frame {
+    width: 500px;
+    margin: 5px;
+    padding: 5px;
+    display: block;
+    border: 1px solid black;
+
+}
+
+/* marked text area */
+#doc_area  {
+    margin: 0px;
+    padding: 0px;
+    line-height: 250%;
+    background-color: #ffffff;
+}
+
+#ins_area {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    font-size: small;
+    font-weight: bold;
+}
+
+#span_measure_area {
+    width:100000px;
+    top:-1000px;
+    position:absolute;
+    display:hidden;
+    line-height: 140%;
+}
+
+#doc_area span {
+    border-style: dashed;
+    border-color: #999999;
+    border-width: thin;
+    word-wrap:break-word;
+}
+
+/* dummy_spanには幅をもたせない */
+#doc_area span.dummy_span {
+    border-width: 0;
+}
+
+#doc_area span.selected {
+    display: inline;
+    border-style: solid;
+    border-color: #000066;
+    border-width: thin;
+    /*background-color: #ffFF00;*/
+}
+
+
+#doc_area span.partial {
+    display: inline;
+    border-style: dashed;
+    border-color: #ff0000;
+    border-width: 2px 2px 2px 2px;
+}
+
+#doc_area span.partialSelected {
+    display: inline;
+    border-style: solid;
+    border-color: #ff0000;
+    border-width: 2px 2px 2px 2px;
+}
+
+/* annottaion area */
+#anno_area {
+    position: absolute;
+    left: 530px;
+
+    padding-left: 10px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    display: block;
+    /*float: left;*/
+    background-color: #cccccc;
+
+    width: 230px;
+ }
+
+/*relation_area */
+#relation_area {
+    position: absolute;
+    left: 950px;
+
+    padding-left: 10px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    display: block;
+    /*float: left;*/
+    background-color: #cccccc;
+
+    width: 230px;
+}
+
+/*insanns_area */
+#insanns_area {
+    position: absolute;
+    left: 1370px;
+
+    padding-left: 10px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    display: block;
+    /*float: left;*/
+    background-color: #cccccc;
+    width: 230px;
+}
+
+/*insanns_area */
+#modanns_area {
+    position: absolute;
+
+    /*
+    float: left;
+    padding-bottom: 32767px;
+    margin-bottom: -32767px;
+    */
+    left: 1790px;
+
+    /*margin-left: 10px;*/
+
+    padding-left: 10px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    display: block;
+    /*float: left;*/
+    background-color: #cccccc;
+
+    width: 230px;
+}
+
+.tmp_hide {
+    opacity: 0.5;
+}
+
+
+/* annotation new button */
+#new_btn {
+    margin-left: 2px;
+}
+
+
+.btn_area {
+    padding-top: 5px;
+}
+
+/* annotaion list area */
+#anno_list_area {
+    display: block;
+    overflow: auto;
+    /*height: 400px;*/
+}
+
+#rel_list_area {
+    display: block;
+    overflow: auto;
+    /*height: 400px;*/
+}
+
+
+.table_header {
+    border-collapse: collapse;
+    width: 200px;
+    background-color: #ffffff;
+}
+
+.table_header td {
+    width: 50px;
+}
+
+
+#anno_list_area table{
+    width: 200px;
+    font-size: small;
+}
+
+
+/* annotation list table */
+table.annotation tr td {
+    width: 50px;
+}
+
+
+table.annotation_text {
+    width: 150px;
+}
+
+
+.t_new {
+    border-style: dashed;
+    border-color: #ffffff;
+    border-width: thin;
+}
+
+
+
+.t_selected {
+    border: 1px #000066 solid;
+    border-width: 1px 1px 1px 1px;
+}
+
+.t_partial {
+    border: 1px #ff0000 dashed;
+    border-width: 2px 2px 2px 2px;
+}
+
+.t_partialSelected {
+    border: 1px #ff0000 double;
+    border-width: 2px 2px 2px 2px;
+}
+
+
+#rel_list_area table{
+    width: 200px;
+    font-size: small;
+}
+
+/* relationlist table */
+table.relation tr td {
+    width: 60px;
+}
+
+
+#insanns_list_area table{
+    width: 200px;
+    font-size: small;
+}
+
+/* relationlist table */
+table.insanns tr td {
+    width: 60px;
+}
+
+
+#modanns_list_area table{
+    width: 200px;
+    font-size: small;
+}
+
+/* relationlist table */
+table.modanns tr td {
+    width: 60px;
+}
+
+
+#undo_btn {
+    cursor: pointer;
+    opacity:0.3;
+}
+
+#redo_btn {
+    cursor: pointer;
+    opacity:0.3;
+}
+
+#multiple_btn {
+    opacity: 0.3;
+}
+
+
+.removeBtn {
+    display: none;
+}
+
+
+
+#notice_area {
+    color: #ff0000;
+    height: 15px;
+}
+
+.error {
+    background-color: #ff0000;
+}
+
+
+#control_area {
+    position: fixed;
+    left: 520px;
+    top: 30px;
+    border: 1px solid #888855;
+    background-color: #eeeebb;
+    padding: 2px;
+}
+
+table.palette {
+    margin: 0 auto;
+    border-spacing: 20px 2px;
+}
+
+
+/* category list */
+.type_show_area {
+    position: static;
+    width: 160px;
+
+    display: block;
+    border: 1px solid #aaaa55;
+    padding: 5px;
+    margin: 2px 0px;
+
+    background-color: #ffffdd;
+    font-size: small;
+}
+
+.type_show_area h1 {
+    display:block;
+    font-size: small;
+    font-weight: bold;
+    margin: 0px;
+    padding: 0px;
+}
+
+
+div.instance {
+    border-radius: 5px; /* CSS3 */
+    -moz-border-radius: 5px; /* Firefox */
+    -webkit-border-radius: 5px;  /* Safari,Chrome */
+    border: 2px solid;     /* 枠線の装飾 */
+}
+
+#src_area {
+    margin-left: 0px;
+    display: none;
+}
+
+#annojson {
+    display: none;
+}
+
+#save_dialog {
+    position: absolute;
+    top:80px;
+    left:50px;
+    display: none;
+    width: 520px;
+    height: 100px;
+    padding: 10px;
+    border: 1px #000033 solid;
+    border-width: 1px 1px 1px 1px;
+    background-color: #ffffff;
+}
+
+#save_area {
+    margin-top: 20px;
+    float: right;
+}
+
+#load_dialog {
+    position: absolute;
+    top:80px;
+    left:50px;
+    display: none;
+    width: 520px;
+    height: 100px;
+    padding: 10px;
+    border: 1px #000033 solid;
+    border-width: 1px 1px 1px 1px;
+    background-color: #ffffff;
+}
+
+#load_area {
+    margin-top: 20px;
+    float: right;
+}
+
+#doc_area span.source_selected {
+    display: inline;
+    border-style: solid;
+    border-color: #0000dd;
+    border-width: thin;
+}
+
 span.Sentence {
     display: block;
     border: 1px solid gray;
