--- a/css/textae.css
+++ b/css/textae.css
@@ -31,13 +31,18 @@ a {
 }
 
 
-#title_area {
-    display: block;
-    width : 100%;
-    height: 20px;
-    opacity: 0.8;
-    text-overflow: ellipsis;
+#title {
+    font-weight:bold;
+    text-shadow: 2px 2px 5px #555555;
 }
+
+#notice {
+    margin-left: 10px;
+    font-style:italic;
+    color:gray;
+}
+
+
 
 #document_frame {
     margin: 5px;
@@ -106,24 +111,10 @@ a {
     padding: 0px;
 }
 
-#span_measure_area {
-    width:100000px;
-    top:-1000px;
-    position:absolute;
-    display:hidden;
-    line-height: 140%;
-}
-
 #doc_area span {
     border-style: dashed;
     border-color: #999999;
     border-width: thin;
-    white-space: pre;
-}
-
-/* dummy_spanには幅をもたせない */
-#doc_area span.dummy_span {
-    border-width: 0;
 }
 
 #doc_area span.selected {
@@ -355,17 +346,10 @@ table.modanns tr td {
     opacity: 0.3;
 }
 
-
 .removeBtn {
     display: none;
 }
 
-
-
-#notice_area {
-    color: #ff0000;
-    height: 15px;
-}
 
 .error {
     background-color: #ff0000;
@@ -378,7 +362,6 @@ table.palette {
 }
 
 
-/* category list */
 .type_show_area {
     position: static;
     width: 160px;
@@ -392,12 +375,10 @@ table.palette {
     font-size: small;
 }
 
-.type_show_area h1 {
-    display:block;
+.type_show_area th {
+    text-align: left;
     font-size: small;
     font-weight: bold;
-    margin: 0px;
-    padding: 0px;
 }
 
 
@@ -413,20 +394,26 @@ div.instance {
     display: none;
 }
 
-#annojson {
-    display: none;
+.dialog h1 {
+    display: block;
+    font-size: medium;
+    font-weight: bold;
+    margin: 0px;
+    padding: 2px;
+    color: white;
+    background-color: #555500;
 }
 
 #save_dialog {
+    z-index: 10;
     position: absolute;
-    top:80px;
+    top:60px;
     left:50px;
     display: none;
-    width: 520px;
+    width: 500px;
     height: 100px;
-    padding: 10px;
-    border: 1px #000033 solid;
-    border-width: 1px 1px 1px 1px;
+    padding: 0px;
+    border: 2px #000033 solid;
     background-color: #ffffff;
 }
 
@@ -436,15 +423,15 @@ div.instance {
 }
 
 #load_dialog {
+    z-index: 10;
     position: absolute;
-    top:80px;
+    top:60px;
     left:50px;
     display: none;
-    width: 520px;
+    width: 500px;
     height: 100px;
-    padding: 10px;
-    border: 1px #000033 solid;
-    border-width: 1px 1px 1px 1px;
+    padding: 0px;
+    border: 2px #000033 solid;
     background-color: #ffffff;
 }
 
