label to connectors added. renewRendering revised.

--- a/css/textae.css
+++ b/css/textae.css
@@ -341,7 +341,8 @@ span.Sentence {
     display:block;
     white-space:nowrap;
     font-size:small;
-    opacity:0.5;
+    background-color:yellow;
+    opacity:0.7;
 }
 
 .label:hover {
