--- a/css/textae.css
+++ b/css/textae.css
@@ -262,7 +262,7 @@ table.palette {
 }
 
 #save_dialog {
-    z-index: 100;
+    z-index: 2147483647;
     position: absolute;
     top:60px;
     left:50px;
@@ -280,7 +280,7 @@ table.palette {
 }
 
 #load_dialog {
-    z-index: 100;
+    z-index: 2147483647;
     position: absolute;
     top:60px;
     left:50px;
