--- a/css/jquery.ui.slider.css
+++ b/css/jquery.ui.slider.css
@@ -25,12 +25,12 @@
     margin-left: 10px;
     margin-top: 0px;
     display:inline-block;
-    width:100px;
+    width: 80px;
     height: 10px;
     font-size: 10pt;
 }
 
 
 #slider {
-    width: 100px;
+    width: 100%;
 }
